examples/tests/invalid/unknown_submodule.w
std.random.String.fromJson("hello");
//^Expected identifier "std" to be a variable, but it's a namespace

// TODO: Fix error message (https://github.com/winglang/wing/issues/2876)